# tcp_server_client

./: .gitignore  CMakeLists.txt  README.md  tst  tst.c
abstraction/: CMakeLists.txt
abstraction/src/: client.c  server.c  server.h  threads.c  threads.h
abstraction/src/packets/: packets.c  packets.h
abstraction/src/packets/types/: data_packet.c
client/: CMakeLists.txt
client/src/: .cp_packets.sh  client.c  client.h  main.c  notes.md  packets.c  packets.h
server/: notes.txt
server/src/: :  main.c  notes.txt  packets.c  packets.h  server.c  server.h
server/src/libs/: d_array.c  d_array.h
server/src/packets/: packets.c  packets.h
server/src/packets/types/: data_packet.h
src/: client.c  client.h  config.h  main.c  server.c  server.h
src/packets/: packets.c  packets.h
src/packets/types/: data_packet.c  data_packet.h  ping_packet.c  ping_packet.h
src/threads/: threads.c  threads.h
